<resources>
    <string name="app_name">MyPureDays</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">הגדרות</string>
    <string name="btStart">התחל</string>
    <string name="btEnd">הפסק</string>
    <string name="btDefinition">הגדרות</string>
    <string name="btCalendar">לוח שנה</string>
    <string name="btStatus">סטטוס</string>
    <string name="title_activity_definition">DefinitionActivity</string>
    <string name="title_activity_calender">Calender</string>
    <string name="icon">icon</string>


    <string name="minPeriodLengthColumn">מינימום ימי מחזור
    לספירת נקיים</string>
    <string name="regularColumn">מחזור סדיר</string>
    <string name="prishaDaysColumn">הצגת ימי פרישה  </string>
    <string name="periodLengthColumn">משך מחזור  </string>
    <string name="countCleanColumn">ספירת נקיים  </string>
    <string name="cleanNotificationColumn">תזכורת נקיים  </string>
    <string name="mikveNotificationColumn"> תזכורת למקווה  </string>
    <string name="typePeriodColumn">סוג עונה</string>

    <string name="periodNote">וסת</string>
    <string name="defaultNote">אין הערות</string>
    <string name="clearDayNote">נקיים</string>
    <string name="mikveNote">יום מקווה</string>
    <string name="prishaNote">יום פרישה</string>
    <string name="startLookingNote">תחילת ראיה</string>
    <string name="endLookingNote">סוף ראיה</string>
    <string name="nextPeriodNote">צפי וסת הבא</string>


    <string name="lastPeriodDate">תאריך וסת אחרון</string>
    <string name="cleanCount">ספירת נקיים</string>
    <string name="periodLength">משך זמן מחזור </string>
    <string name="periodAvg">ממוצע מחזור</string>
    <string name="dateMikveh"> תאריך מקווה</string>
    <string name="prishaDate">  תאריך פרישה</string>
    <string name="nextPeriodDate"> תאריך וסת הבא </string>

    <string name="btDialogStart">התחל ראיה</string>
    <string name="btDialogEnd">הפסק ראיה</string>
    <string name="btDialogSaveNote">שמירת הערה</string>
    <string name="btClearDay">נקה יום</string>


    <string name="Sunday">א</string>
    <string name="Monday">ב</string>
    <string name="Tuesday">ג</string>
    <string name="Wednesday">ד</string>
    <string name="Thursday">ה</string>
    <string name="Friday">ו</string>
    <string name="Saturday">ש</string>

    <string name="CalendarTitle">לוח שנה</string>
    <string name="arrowRight">חץ ימינה</string>
    <string name="arrowLeft">חץ שמאלה</string>
    <string name="Notes">אין הערות</string>

    <string name="dayOna">עונת יום</string>
    <string name="nightOna"> עונת לילה</string>


    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="claenFirstAndLast">ראשון ואחרון</string>
    <string name="claenFirstThreeDays">3 ימים ראשונים</string>
    <string name="claenOnceADay">פעם ביום</string>
    <string name="claenTwiceADay">פעמיים ביום</string>
    <string name="claenIrrelevant">לא רלוונטי</string>
    <string name="onaDefault">לא רלוונטי</string>
    <string name="onaUnknow">לא ידוע</string>
    <string name="onaDay">יום</string>
    <string name="onaNigth">לילה</string>

    <string name="NoteSaved">ההערה נשמרה</string>
    <string name="title_activity_alarm_clear">alarm_clear</string>
</resources>