<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalenderActivity">

    <RelativeLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#ff7fc4"
        android:gravity="center">

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CalendarTitle"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="#4b4b4b"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ff6dbc"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <ImageButton
                        android:id="@+id/ib_prev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/arrow_left"
                        android:contentDescription="@string/arrowLeft" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dip"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp">

                    <ImageButton
                        android:id="@+id/Ib_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/arrow_right"
                        android:contentDescription="@string/arrowRight" />

                </FrameLayout>
            </LinearLayout>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sunday"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Monday"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Tuesday"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Wednesday"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Thursday"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Friday"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Saturday"
                    android:textColor="#ffffff" />

            </TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#dfdfdf"
                android:padding="2dp" />

            <GridView
                android:id="@+id/gv_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:cacheColorHint="#80000000"
                android:gravity="center"
                android:listSelector="@android:color/transparent"
                android:numColumns="7"
                android:padding="2dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp"
                android:horizontalSpacing="2dp"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#343434"
                android:orientation="vertical"/>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="#ffcbe7"
        android:gravity="center"
        android:padding="15dp">

        <TextView
            android:id="@+id/TextView_Note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/Notes"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>


