<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mypuredays.mypuredays.StatusActivity">

    <LinearLayout
        android:id="@+id/LAYOUT_lastPeriodDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/FIELD_lastPeriodDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/LABEL_lastPeriodDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastPeriodDate"
            android:textSize="20dp"
            android:textIsSelectable="false"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LAYOUT_cleanCount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"
        android:layout_marginBottom="10dp"

        >


        <TextView
            android:id="@+id/FIELD_cleanCount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="--"/>

        <TextView
            android:id="@+id/LABEL_cleanCount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cleanCount"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LAYOUT_dateMikveh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/FIELD_dateMikveh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/LABEL_dateMikveh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateMikveh"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LAYOUT_periodLength"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"
        android:layout_marginBottom="10dp"

        >
        <TextView
            android:id="@+id/FIELD_periodLength"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/LABEL_periodLength"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/periodLength"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LAYOUT_periodAvg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"
        android:layout_marginBottom="10dp"

        >
        <TextView
            android:id="@+id/FIELD_periodAvg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/LABEL_periodAvg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/periodAvg"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LAYOUT_prishaDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"
        android:layout_marginBottom="10dp"

        >



        <TextView
            android:id="@+id/FIELD_prishaDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/LABEL_prishaDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prishaDate"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LAYOUT_nextPeriodDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/square1"

        >

        <TextView
            android:id="@+id/FIELD_nextPeriodDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/LABEL_nextPeriodDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nextPeriodDate"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

</LinearLayout>
